Day3_29Oct2020_Products

--- a/lwc/products/products.html
+++ b/lwc/products/products.html
@@ -54,7 +54,8 @@
             </div>
             <div class="cart-footer">
                 <h3>Your Total : $ <span class="cart-total">0</span></h3>
-                <button class="clear-cart banner-btn">clear cart</button>
+                <button class="clear-cart banner-btn slds-m-around_xx-small">clear cart</button>
+                <button class="buy-now banner-btn slds-m-around_xx-small">Buy Now</button>
             </div>
         </div>
     </div>
