Day3_29Oct2020_CartFunctionality

--- a/lwc/navbar/navbar.html
+++ b/lwc/navbar/navbar.html
@@ -16,7 +16,7 @@
                 <a href="/account/login?ret=/">Login</a>
             </div> -->
 
-            <div data-key="cartbtn" class="cart-btn">
+            <div data-key="cartbtn" class="cart-btn" onclick={hanldeShowCart}>
                 <span class="nav-icon">
                     <i class="fas fa-cart-plus"></i>
                 </span>
